--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ netease_comment: false
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
 sidebar-about-description: " "
-sidebar-avatar: https://github.com/Huxpro.png # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: img/post-bg-universe.jpg # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
 featured-tags: true # whether or not using Feature-Tags
@@ -95,8 +95,8 @@ page-mathjax: false
    # { title: "Ebn Zhang", href: "https://ebnbin.dev/" },
    # { title: "Kun Qian", href: "http://kunq.me" },
    # { title: "Sherry Woo", href: "https://sherrywoo.me/" },
-    #{ title: "SmdCn", href: "http://blog.smdcn.net" },
-    #{ title: "JiyinYiyong", href: "http://tiye.me/" },
+   #{ title: "SmdCn", href: "http://blog.smdcn.net" },
+   #{ title: "JiyinYiyong", href: "http://tiye.me/" },
    # { title: "DHong Say", href: "http://dhong.co" },
    # { title: "尹峰以为", href: "http://ingf.github.io/" },
  # ]
