--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ netease_comment: false
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
 sidebar-about-description: " "
-sidebar-avatar: img/post-bg-universe.jpg # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: img//post-bg-universe.jpg # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
 featured-tags: true # whether or not using Feature-Tags
